Lidando com api e startando o servidor web com Koa.js

--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   },
   "author":{
     "name": "Eduardo Barbosa",
-    "email": "<eduardo@rede.ulbra.br>" 
+    "email": "eduardo@rede.ulbra.br" 
   } ,
   "license": "MIT"
 }
