--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,8 @@
 {
   "name": "api",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {},
   "author": {
     "name": "Eduardo Barbosa",
@@ -9,6 +10,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "koa": "^2.13.4"
+    "@koa/cors": "^3.4.2",
+    "@koa/router": "^12.0.0",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "^4.3.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.4.0"
   }
 }
