--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,11 @@
   "version": "0.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {},
+  "scripts": {  
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "author": {
     "name": "Eduardo Barbosa",
     "email": "eduardo@rede.ulbra.br"
@@ -12,6 +16,7 @@
   "dependencies": {
     "@koa/cors": "^3.4.2",
     "@koa/router": "^12.0.0",
+    "@prisma/client": "^4.4.0",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0"
   },
