--- a/api/package.json
+++ b/api/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {  
-  },
+  "scripts": {},
   "prisma": {
     "seed": "node prisma/seed.js"
   },
@@ -17,6 +16,9 @@
     "@koa/cors": "^3.4.2",
     "@koa/router": "^12.0.0",
     "@prisma/client": "^4.4.0",
+    "bcrypt": "^5.1.0",
+    "date-fns": "^2.29.3",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0"
   },
