--- a/api/package.json
+++ b/api/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.0",
   "main": "server.js",
   "type": "module",
-  "scripts": {},
+  "scripts": {
+    "start": "node -r dotenv-safe/config server.js"
+  },
   "prisma": {
     "seed": "node prisma/seed.js"
   },
@@ -18,6 +20,7 @@
     "@prisma/client": "^4.4.0",
     "bcrypt": "^5.1.0",
     "date-fns": "^2.29.3",
+    "dotenv-safe": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0"
