--- a/api/vercel.json
+++ b/api/vercel.json
@@ -1,7 +1,7 @@
 {
     "resrite": [
         {
-            "source": "/(.*",
+            "source": "/(.*)",
             "destination":"/app"
         }
     ]
