--- a/api/package.json
+++ b/api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
   "version": "0.0.0",
-  "main": "server.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "start": "node -r dotenv-safe/config app/index.js"
